Fix menu for declarative apps.